--- a/.github/workflows/dropbox.yml
+++ b/.github/workflows/dropbox.yml
@@ -28,6 +28,6 @@ jobs:
           cd output
           aws s3 cp . s3://www.neversaw.us/ --recursive --acl public-read
         env:
-          AWS_SECRET_ACCESS_KEY: ${{ github.AWS_SECRET_ACCESS_KEY }}
-          AWS_ACCESS_KEY_ID: ${{ github.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_DEFAULT_REGION: us-west-2
