--- a/.github/workflows/dropbox.yml
+++ b/.github/workflows/dropbox.yml
@@ -26,7 +26,7 @@ jobs:
       - name: upload the blog
         run: |
           cd output
-          aws s3 sync . s3://www.neversaw.us/ --recursive --acl public-read
+          aws s3 sync . s3://www.neversaw.us/ --acl public-read
         env:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
