move static out of blog

--- a/.github/workflows/dropbox.yml
+++ b/.github/workflows/dropbox.yml
@@ -19,8 +19,8 @@ jobs:
       - name: download dropbox blog
         run: |
           bin/download_folder.sh ${{ secrets.DROPBOX_KEY }}
+          mv blog/static/* static
           mv blog/* content
-          mv static/* static
       - name: 'build the blog, BE THE BLOG'
         run: |
           bin/zola build --output-dir output
