--- a/config.toml
+++ b/config.toml
@@ -4,13 +4,10 @@ base_url = "https://www.neversaw.us"
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = true
-highlight_theme = "inspired-github"
-
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
+
+title = "Chris Dickinson"
 
 theme = "neversawus"
 
@@ -19,3 +16,9 @@ paths = "off"
 
 [extra]
 # Put all your custom variables here
+
+[markdown]
+# Whether to do syntax highlighting
+# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
+highlight_code = true
+highlight_theme = "inspired-github"
