move the likelike sqlite3 file into place

--- a/.github/workflows/dropbox.yml
+++ b/.github/workflows/dropbox.yml
@@ -25,14 +25,14 @@ jobs:
         run: |
           gh release download --repo chrisdickinson/likelike -p '*x64_linux*'
           <likelike*.tar.gz tar zxv -C /usr/local/bin
-          mkdir -p ~/.local/share
+          mkdir -p ~/.local/share/likelike
         env:
           GH_TOKEN: ${{ github.token }}
 
       - name: download dropbox blog
         run: |
           bin/download_folder.sh ${{ secrets.DROPBOX_KEY }}
-          mv blog/likelike.sqlite3 ~/.local/share/ || true
+          mv blog/likelike.sqlite3 ~/.local/share/likelike/db.sqlite3 || true
           mv blog/static/* static
           mv blog/* content
 
